@@ -1,3 +1,10 @@
+2009-10-30  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        Fix the build.
+
+        * accessibility/AccessibilityRenderObject.cpp:
+        (WebCore::AccessibilityRenderObject::positionalDescriptionForMSAA):
+
 2009-10-30  Mark Rowe  <mrowe@apple.com>
 
         Merge r50354.
